Correct text alignment for #textBox
Fix text alignment in #textBox style

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 }
 
 #textBox {
-    color: red
+    color: red;
+    text_align: center
 }
     
